--- a/proyecto1.html/style-index.css
+++ b/proyecto1.html/style-index.css
@@ -1,8 +1,16 @@
 body {
+    
+    height: 400px;
     margin: 0;
     padding: 0;
     background-color: rgb(235, 234, 234);
+    
 }
+h1{
+    text-align: center;
+}
+
+
 
 /*
 *{
@@ -34,24 +42,54 @@ body {
     padding: 15px 95px;
     display: block;
     text-decoration: none;
+    border-radius: 25px;
 }
 
 #menu ul li a:hover {
     background-color: rgb(69, 125, 172);
 }
 
-body>header {
-    background-color: rgb(32, 41, 38);
-    background-image: url(../img/images\ \(2\).jpg);
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
 
+body>header {
+    background-color: rgb(5, 5, 5);
+    background-image: url(../proyecto1.html/img/pngwing.com\ \(1\).png);
+    background-repeat: no-repeat;
+    margin: 0%;
+    min-height: 0%;
+    background-size: 100% 100%;
+    background-position:5px;
     color: #ebf1e3;
     margin-top: 0px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     display: flex;
+    
+    padding: 4em;
+    width: auto;
+    height: 45%;
+
+   
+}
+#noticias{
+    width: 650px;
+    margin: 5%;
+}
+.centro{
+    color: #ebf1e3;
+    margin-top: 0px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    display: flex;
+    direction: column;
     justify-content: center;
     padding: 2em;
+   
+}
+.Comentarios{
+    display: flex;
+    justify-content: flex-start;
+    background-color: aqua;
+    width: 220px;
+    margin: 5%;
+    
 }
 
 form {
@@ -70,6 +108,7 @@ form {
 
 
 input {
+   
     width: 100%;
     border-radius: 1px;
     box-shadow: 2px 2px 1px 0px rgba(0, 0, 0, 0.75);
@@ -85,37 +124,39 @@ body>header>div {
     font-family: 'Times New Roman', Times, serif;
 
 }
+iframe{
+    display: flex;
+    align-content: center;
+}
 
 /*header>img {
     float: left;
 }*/
 
+
 aside {
-    position: absolute;
-    top: 200px;
-    width: 200px;
-    right: 10px;
+   
+   
+  
     z-index: 2;
-    background-color: rgb(43, 39, 39);
-    border: 1px solid rgb(0, 0, 0);
-    ;
+    background-color: rgb(169, 197, 196);
+    border: 1px solid rgb(40, 47, 48);
+  
     border-radius: 20px;
-    padding: 1em;
+    padding: 2em;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    text-align: center;
     font-size: medium;
-    color: white;
+    color: rgb(8, 8, 8);
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+    width: 250px;
+    height: 50px;
+    
 }
 
-article {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
-
-article {
-    color: rgb(0, 0, 0);
-    padding: 1em;
-    font-size: medium;
-    text-align: left;
-}
 
 button {
     background-color: rgb(202, 190, 226);
